introduce new way of fb post import: api fb import
